--- a/Frontend/login page/index.html
+++ b/Frontend/login page/index.html
@@ -1,5 +1,3 @@
-<!-- LOGIN PAGE HTML - -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,10 +26,14 @@
                     <label><input type="checkbox"> Keep me logged in</label>
                     <a href="#">Forgot Password?</a>
                 </div>
-
-                <button type="submit">Login</button>
+               <button type="button" onclick="window.location.href='home.html'">
+               Login
+              </button>
+               
             </form>
         </div>
     </div>
 </body>
 </html>
+
+
