--- a/Frontend/sign up page/signup.html
+++ b/Frontend/sign up page/signup.html
@@ -1,4 +1,3 @@
-<!-- SIGN UP PAGE HTML - -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,28 +7,39 @@
     <link rel="stylesheet" href="signup.css">
 </head>
 <body>
-    <div class="signbox" id="mainbox">
-    <h4> Create Account </h4>
-    <form>
-     <label for="firstname">Enter First Name</label>
-     <input type="text" id="firstname" placeholder="First Name">
-     <br>
-     <br>
-     <label for="lastname">Enter Last Name</label>
-     <input type="text" id="lastname" placeholder="Last Name">
-     <br>
-     <br>
-     <label for="email">Enter Email Adress</label>
-     <input type="text" id="email" placeholder="email">
-     <br>
-     <br>
-    <label for="username">Create Username</label>
-    <input type="text" id="username" placeholder="username">
-     <br>
-     <br>
-    <label for="pwd">Create Password</label>
-    <input type="text" id="pwd" placeholder="password">
-     <br>
-     <br>
-    </form>
-    <button id="signupbutton">Create</button>
+    <div class="signbox">
+        <h2>Create Account</h2>
+        <p>Already have an account? <a href="login.html">Login</a></p>
+
+        <form>
+            <label for="firstname">First Name</label>
+            <input type="text" id="firstname" placeholder="Enter your first name">
+
+            <label for="lastname">Last Name</label>
+            <input type="text" id="lastname" placeholder="Enter your last name">
+
+            <label for="email">Email Address</label>
+            <input type="email" id="email" placeholder="Enter your email">
+
+            <label for="username">Create Username</label>
+            <input type="text" id="username" placeholder="Choose a username">
+
+            <label for="pwd">Create Password</label>
+            <input type="password" id="pwd" placeholder="Enter a strong password">
+
+            <a href="home.html">
+             <button type="button">Create Account</button>
+            </a>
+
+        </form>
+    </div>
+</body>
+</html>
+
+
+
+
+
+
+
+ 
