minor changes to file names

--- a/Frontend/loginPage/index.html
+++ b/Frontend/loginPage/index.html
@@ -13,7 +13,7 @@
 
         <div id="welcome">
             <h2>Welcome Back!</h2>
-            <p>Don't have an account yet? <a href="signup_page.html">Sign Up</a></p>
+            <p>Don't have an account yet? <a href="../signUpPage/signup.html">Sign Up</a></p>
 
             <form>
                 <label for="username">Username</label>
@@ -26,7 +26,7 @@
                     <label><input type="checkbox"> Keep me logged in</label>
                     <a href="#">Forgot Password?</a>
                 </div>
-               <button type="button" onclick="window.location.href='home.html'">
+               <button type="button" onclick="window.location.href='../homeScreen/home.html'">
                Login
               </button>
                
