--- a/Frontend/signUpPage/signup.html
+++ b/Frontend/signUpPage/signup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="signbox">
         <h2>Create Account</h2>
-        <p>Already have an account? <a href="login.html">Login</a></p>
+        <p>Already have an account? <a href="../loginPage/index.html">Login</a></p>
 
         <form>
             <label for="firstname">First Name</label>
@@ -27,7 +27,7 @@
             <label for="pwd">Create Password</label>
             <input type="password" id="pwd" placeholder="Enter a strong password">
 
-            <a href="home.html">
+            <a href="../homeScreen/home.html">
              <button type="button">Create Account</button>
             </a>
 
